--- a/docs/reference/src/parentheses.adoc
+++ b/docs/reference/src/parentheses.adoc
@@ -1,15 +1,17 @@
-# Parenthesized expressions
+= Parenthesized expressions
 
-```bnf
+[source,bnf]
+----
 PARENTHESIZED_EXPR : "(" EXPR ")"
-```
+----
 
 Parentheses can be used to enforce a particular order of evaluation in expressions that contain
 multiple operators.
 
 An example of a parenthesized expression:
 
-```cairo
+[source,cairo]
+----
  2 + 2  * 2 // == 6
 (2 + 2) * 2 // == 8
-```
+----
