--- a/docs/reference/src/whitespace.adoc
+++ b/docs/reference/src/whitespace.adoc
@@ -1,8 +1,9 @@
-# Whitespace
+= Whitespace
 
-```bnf
+[source,bnf]
+----
 EOL : "\n" | "\r\n"
-```
+----
 
 Whitespace is any non-empty string containing only characters that have the https://www.unicode.org/reports/tr31/[`Pattern_White_Space`]
 Unicode property, namely:
