--- a/docs/reference/src/comments.adoc
+++ b/docs/reference/src/comments.adoc
@@ -1,13 +1,15 @@
-# Comments
+= Comments
 
-```bnf
+[source,bnf]
+----
 LINE_COMMENT : "//"  ( ~EOL* )
-```
+----
 
 Comments follow general C++/Rust style of line (`//`) comments.
 
-## Example
+== Example
 
-```cairo
+[source,cairo]
+----
 // Comment.
-```
+----
