--- a/docs/reference/src/keywords.adoc
+++ b/docs/reference/src/keywords.adoc
@@ -1,4 +1,4 @@
-# Keywords
+= Keywords
 
 There are three keyword categories:
 
@@ -6,13 +6,13 @@ There are three keyword categories:
 - <<_reserved_keywords,reserved>>
 - <<_contextual_keywords,contextual>>
 
-## Strict keywords
+== Strict keywords
 
 These keywords can only be used in their correct contexts.
 They cannot be used as names of any items.
 
-
-```
+[source]
+----
 break
 const
 continue
@@ -33,16 +33,17 @@ trait
 true
 type
 use
-```
+----
 
-## Reserved keywords
+== Reserved keywords
 
 These keywords aren't used yet, but they are reserved for future use.
 They have the same restrictions as strict keywords.
 The reasoning behind this is to make current programs forward compatible with future versions of
 Cairo by forbidding them to use these keywords.
 
-```
+[source]
+----
 as
 assert
 do
@@ -65,9 +66,9 @@ where
 while
 with
 yield
-```
+----
 
-## Contextual keywords
+== Contextual keywords
 
 Some grammar productions may make use of new keywords not listed here.
 Such keywords have special meaning only in these certain contexts.
