--- a/docs/reference/src/let-statement.adoc
+++ b/docs/reference/src/let-statement.adoc
@@ -1,8 +1,9 @@
-# Let statement
+= Let statement
 
-```bnf
+[source,bnf]
+----
 LET_STMT : "let" PATTERN (":" TYPE)? "=" EXPR ";"
-```
+----
 
 A _let statement_ introduces a new set of variables, given by an irrefutable pattern.
 The pattern is followed optionally by a type annotation and then by an initializer expression.
