--- a/docs/reference/src/literal-expressions.adoc
+++ b/docs/reference/src/literal-expressions.adoc
@@ -1,25 +1,28 @@
-# Literal expressions
+= Literal expressions
 
-```bnf
+[source,bnf]
+----
 LITERAL_EXPR : NUMERIC_LITERAL
              | BOOLEAN_LITERAL
-```
+----
 
 A _literal expression_ is an expression consisting of a single token, rather than a sequence of
 tokens, that immediately and directly denotes the value it evaluates to, rather than referring to it
 by name or some other evaluation rule.
 
-## Boolean literals
+== Boolean literals
 
-```bnf
+[source,bnf]
+----
 BOOLEAN_LITERAL : "true" | "false"
-```
+----
 
 The two values of the boolean type are written `true` and `false`.
 
-## Numeric literals
+== Numeric literals
 
-```bnf
+[source,bnf]
+----
 NUMERIC_LITERAL : ( DEC_LITERAL | HEX_LITERAL | BIN_LITERAL ) LITERAL_SUFFIX?
 
 DEC_LITERAL : [0-9] [0-9_]*
@@ -27,7 +30,7 @@ HEX_LITERAL : "0x" [a-fA-F0-9_]*
 BIN_LITERAL : "0b" [01_]*
 
 LITERAL_SUFFIX : XID_Start XID_Continue*
-```
+----
 
 A numeric literal can be written using three bases:
 
@@ -60,11 +63,11 @@ Examples of numeric literals of various forms:
 
 [cols="1,1,1",options="header"]
 |===
-| Literal                 | Value | Type  
+| Literal                 | Value | Type
 | `1234`                  | 1234  | `felt`
 | `1234f`                 | 1234  | `felt`
 | `1234_f`                | 1234  | `felt`
-| `1234i`                 | 1234  | `int` 
+| `1234i`                 | 1234  | `int`
 | `1234u`                 | 1234  | `uint`
 | `0x4D2`                 | 1234  | `felt`
 | `0x4_D2`                | 1234  | `felt`
