--- a/docs/reference/src/naming-conventions.adoc
+++ b/docs/reference/src/naming-conventions.adoc
@@ -1,8 +1,8 @@
-# Naming conventions
+= Naming conventions
 
 This chapter covers standard naming conventions.
 
-## Casing
+== Casing
 
 In general, use `PascalCase` for names of types or traits and use `snake_case` otherwise.
 More precisely:
@@ -32,13 +32,14 @@ So, we have `btree_map` rather than `b_tree_map`, but `PI_2` rather than `PI2`.
 
 Language implementations can emit warnings when names do not follow these rules.
 
-## Underscore Prefix (e.g. `_foo`)
+== Underscore Prefix (e.g. `_foo`)
 
 The name of an unused variable must start with an _ (a common example is simply "_").
 
-```cairo
+[source,cairo]
+----
 let _unused = compute_something();
-```
+----
 
 Language implementations can emit warnings when a variable **not** starting with an underscore is
 only written-to but is never read. The same applies when a variable starting with an underscore is
