--- a/docs/reference/src/operator-expressions.adoc
+++ b/docs/reference/src/operator-expressions.adoc
@@ -1,10 +1,11 @@
-# Operator expressions
+= Operator expressions
 
-```bnf
+[source,bnf]
+----
 OPERATOR_EXPR : NEGATION_OP_EXPR
               | ARITHMETIC_OR_LOGICAL_OP_EXPR
               | EQUALITY_EXPR
               | COMPARISON_EXPR
               | BOOLEAN_EXPR
               | ERROR_PROPAGATION_EXPR
-```
+----
